# Flow_Code_Hackathon

./: .gitignore  README.md  docker-compose.yml  requirements.txt
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 75002c421612_initial_tables.py
backend/app/: db.py  deps.py  main.py  models.py  schemas.py
backend/app/api/: auth.py  matches.py  tournaments.py
backend/app/services/: auth.py  bracket.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: Bracket.jsx  Layout.jsx  MatchCard.jsx  TeamForm.jsx
frontend/src/pages/: BracketView.jsx  CreateTournament.jsx  Login.jsx
frontend/src/utils/: auth.js
